@@ -1,0 +1,5 @@
+#!/usr/bin/ruby -w
+
+# T_383mp4_text_track_subtitles
+describe "mkvmerge / MP4 with 'text' type subtitle (non-chapter) tracks"
+test_merge "data/mp4/text-track-subtitles.mp4"
