@@ -1,3 +1,9 @@
+2012-12-28  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: bug fix: "text"-type tracks in MP4 files are only
+        treated as chapters if their track ID is listed on a "chap" atom
+        inside a "tref" track reference atom. Fixes #815.
+
 2012-12-27  Moritz Bunkus  <moritz@bunkus.org>
 
 	* mkvmerge, mmg: new feature: Implemented splitting by chapter
